# nem-energy-pipeline

./: .gitignore  pyproject.toml
adf-nem-v3gnwzv72hd7s/: ARMTemplateParametersForFactory.json
adf-nem-v3gnwzv72hd7s/linkedTemplates/: ArmTemplateParameters_master.json  ArmTemplate_0.json  ArmTemplate_master.json
adf/dataflow/: df_load_dispatch_price.json  df_load_gold.json
adf/dataset/: ds_etl_control.json  ds_gold_fct_dispatch_price.json  ds_gold_table.json
adf/linkedService/: ls_adls_nem.json  ls_sql_nem_gold.json
adf/pipeline/: pl_load_gold.json  pl_load_gold_dispatch_price.json
infra/: main.bicep
scripts/: build_dim_unit.py  inspect_parquet.py  peek_bronze.py
sql/: 01_dimensions.sql  02_facts.sql  03_etl_control.sql  04_dim_unit.sql  05_data_quality_views.sql
src/nem/: __init__.py  extractor.py  parser.py  silver.py
src/nem_energy_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_parser.py
