[project]
name = "nem-energy-pipeline"
version = "0.1.0"
description = "AEMO NEM energy-market data pipeline on Azure (ADF + Power BI)"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pydantic>=2",
    "pandas",
    "pyarrow",
    "azure-storage-blob",
    "azure-identity",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
